--- a/views/index.html
+++ b/views/index.html
@@ -25,7 +25,7 @@
       </div>
       <div class="footer">
         <p>
-          by <a href="https://www.freecodecamp.org">freeCodeCamp</a>
+          by <a href="https://instagram.com/sat_ig462/">sat_ig462</a>
         </p>
       </div>
    </body>
